# iDNSd

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  mdns.cpp  rr.cpp
src/inc/: .mdns.hpp.swp  mdns.hpp  rr.hpp
